Añade pruebas unitarias al servicio de personas (PersonaService)